--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <a href="https://github.com/Ahmedemm"> <h1>404</h1></a>
+    <pre>
+    <a href="https://github.com/Ahmedemm"> <h1>    404    </h1></a></pre>
   </body>
 </html>
